Corregir issues de calidad SonarQube en ms-loadfiles-neg
- S106: reemplazar System.out.println por log.info en LoadFilesRestController
- S125: eliminar bloques de código comentado en LoadFilesRestController
- S1118: agregar constructor privado a clase utilitaria ConstantVariables
- S1128: eliminar import no utilizado java.util.Date en CompanyFile
- S1155: cambiar fileName.length() > 0 a !fileName.isEmpty() en FileStorageServiceImpl
- S1161: eliminar modificador public redundante en métodos de interfaces DAO
- S1611: usar builder ResponseEntity.status().body() en lugar de constructor verbose
- S1854: eliminar inicializaciones a null de variables que se asignan en try-catch
- S2185: reemplazar Long.valueOf(1) por literales 1L en controllers
- S2259: añadir guarda nula para getOriginalFilename() en FileStorageServiceImpl
- S2386: corregir orden de modificadores a public static final en ConstantVariables
- S2589: corregir condición lógica && a || en FileStorageServiceImpl.loadFile
- S2629: unificar cadenas de log concatenadas en FileToSignServiceImpl
- S2789: eliminar asignaciones de null a variables Optional en controllers
- S5785: reemplazar comparación Long == int por Long.valueOf(1L).equals() en services
- S6204: reemplazar Collectors.toList() por .toList() nativo de Java 17
- S1068: eliminar campo Converter no utilizado en FilesSignedRestController

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>